[metadata]
name = stestr
summary = A test runner runner similar to testrepository
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance

[files]
packages =
    stestr

[entry_points]
console_scripts =
    stestr = stestr.cli:main

[extras]
sql =
    subunit2sql>=1.8.0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = stestr/locale
domain = stestr

[update_catalog]
domain = stestr
output_dir = stestr/locale
input_file = stestr/locale/stestr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stestr/locale/stestr.pot
