[metadata]
name = stestr
summary =  A parallel Python test runner built around subunit
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
home-page = http://stestr.readthedocs.io/en/latest/
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
project_urls =
    Documentation = https://stestr.readthedocs.io
    Source Code = https://github.com/mtreinish/stestr
    Bug Tracker = https://github.com/mtreinish/stestr/issues
python-requires = >=3.5

[files]
packages =
    stestr

[entry_points]
console_scripts =
    stestr = stestr.cli:main
stestr.cm =
    run = stestr.commands.run:Run
    failing = stestr.commands.failing:Failing
    init = stestr.commands.init:Init
    last = stestr.commands.last:Last
    list = stestr.commands.list:List
    load = stestr.commands.load:Load
    slowest = stestr.commands.slowest:Slowest
    history = stestr.commands.history:History

[extras]
sql =
    subunit2sql>=1.8.0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = stestr/locale
domain = stestr

[update_catalog]
domain = stestr
output_dir = stestr/locale
input_file = stestr/locale/stestr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stestr/locale/stestr.pot
